--- a/index.html
+++ b/index.html
@@ -7,11 +7,30 @@
     <link rel="stylesheet" href="dist/css/main.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="header__container">
+        <h1>
+          <img
+            class="header__logo"
+            src="./dist/images/disneyplus.svg"
+            alt="disneyplus"
+          />
+        </h1>
+        <ul class="header__links">
+          <li class="header__links__item">
+            <a href="#" class="button button--secondary">Assine agora</a>
+          </li>
+          <li class="header__links__item">
+            <a href="#" class="button button--dark">Entrar</a>
+          </li>
+        </ul>
+      </div>
+    </header>
     <section class="hero">
       <div class="hero__content">
-        <h1 class="hero__content__branding">
+        <div class="hero__content__branding">
           <img src="./dist/images/disneyplus.svg" alt="disneyplus" />
-        </h1>
+        </div>
         <h3 class="title--small">As melhores historias em um só lugar</h3>
         <p>
           <a href="#" class="link-text">Assinar o disney+</a>
@@ -164,6 +183,185 @@
         plataformas.
       </p>
     </section>
+    <section class="image-text-section">
+      <img
+        src="./dist/images/tv_pc_tablet_celular.png"
+        alt="Imagem de TV, computador, tablet e celular"
+      />
+      <div class="image-text-section__text_container">
+        <h2 class="title">Assista do seu jeito</h2>
+        <p class="text--big">
+          Aproveite a tela grande da TV ou assista no tablet, laptop, celular e
+          outros aparelhos. Nossa seleção de títulos em 4k não para de crescer.
+          Além disso, para a felicidade de todos, é possivel assistir em até 4
+          telas ao mesmo tempo
+        </p>
+      </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+      <picture>
+        <source
+          media="(max-width: 768px)"
+          srcset="./dist/images/fundo_rei_leao_celular.png"/>
+          <img
+          src="./dist/images/fundo_rei_leao.png"
+          alt="Rei leão"
+        />
+      </picture>
+      <div
+        class="image-text-section__text_container image-text-section--image-full-width__text_container"
+      >
+        <h2 class="title">Baixe filmes e séries</h2>
+        <p class="text--big">
+          Baixe e assista o quando e onde quiser. Assim seus favoristos estão
+          sempre com você, até mesmo sem internet.
+        </p>
+      </div>
+    </section>
+    <section class="available-devices">
+      <h2 class="title">Disponivel nos seus dispositivos favoritos</h2>
+      <ul class="available-devices__list">
+        <li class="available-devices__list__item">
+          <img
+            src="./dist/images/dispositivos/computador.png"
+            alt="computador"
+          />
+          <h4 class="title--small">Computador</h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>MacOS</li>
+            <li>PC Windows</li>
+          </ul>
+        </li>
+        <li class="available-devices__list__item">
+          <img
+            src="./dist/images/dispositivos/computador.png"
+            alt="computador"
+          />
+          <h4 class="title--small">Computador</h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>MacOS</li>
+            <li>PC Windows</li>
+          </ul>
+        </li>
+        <li class="available-devices__list__item">
+          <img
+            src="./dist/images/dispositivos/computador.png"
+            alt="computador"
+          />
+          <h4 class="title--small">Computador</h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>MacOS</li>
+            <li>PC Windows</li>
+          </ul>
+        </li>
+        <li class="available-devices__list__item">
+          <img
+            src="./dist/images/dispositivos/computador.png"
+            alt="computador"
+          />
+          <h4 class="title--small">Computador</h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>MacOS</li>
+            <li>PC Windows</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section class="faq">
+      <h2 class="title">Perguntas frequentes</h2>
+      <ul class="faq__questions">
+        <li class="faq__questions__item faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            O que está incluído no Disney+?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            O Disney+ oferece:<br />
+            Experiência de entretenimento exclusiva.<br />
+            As melhores histórias da Disney, Pixar, Marvel, Star Wars e National
+            Geographic, tudo em um só lugar.<br />
+            Downloads ilimitados em até 10 dispositivos compatíveis.<br />
+            Mais de 300 títulos em 4K UHD e HDR. A possibilidade de assistir em
+            até 4 dispositivos compatíveis simultaneamente sem custo
+            adicional.<br />
+            IMAX Enhanced: disponível para alguns títulos da Marvel em
+            dispositivos compatíveis com o Disney+.
+          </div>
+        </li>
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            Pergunta?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            A resposta da pergunta
+          </div>
+        </li>
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            Pergunta?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            A resposta da pergunta
+          </div>
+        </li>
+      </ul>
+    </section>
+    <footer class="footer">
+      <div class="footer__container">
+        <img
+          class="footer__logo"
+          src="./dist/images/disneyplus.svg"
+          alt="Disney+"
+        />
+        <ul class="footer__links">
+          <li class="footer__links__item">
+            <div class="language-selector">
+              <img src="./dist/images/icones/globe.svg" alt="globo" />
+              <select>
+                <option>English</option>
+                <option selected>Portugues</option>
+              </select>
+            </div>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Termos e Condições de uso</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Politica de privacidade</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Proteção de Dados no Brasil</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Anuncios personalizado</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Dispositivos compativeis</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Ajuda</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Sobre o Disney+</a>
+          </li>
+        </ul>
+        <p class="text--small">
+          ® 2024 Disney, Disney+ e The Walt Disney Company. Todos os direitos
+          reservados. Serviço de assinatura paga. Conteúdo sujeito a
+          disponibilidade.
+        </p>
+        <p class="text--small">
+          Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e
+          condições. O serviço Disney+ é comercializado por The Walt Disney
+          Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas,
+          12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil
+          e CNPJ/M 73.042.962/0004-20
+        </p>
+      </div>
+    </footer>
     <script src="./src/main.js"></script>
   </body>
 </html>
