--- a/index.html
+++ b/index.html
@@ -202,11 +202,9 @@
       <picture>
         <source
           media="(max-width: 768px)"
-          srcset="./dist/images/fundo_rei_leao_celular.png"/>
-          <img
-          src="./dist/images/fundo_rei_leao.png"
-          alt="Rei leão"
+          srcset="./dist/images/fundo_rei_leao_celular.png"
         />
+        <img src="./dist/images/fundo_rei_leao.png" alt="Rei leão" />
       </picture>
       <div
         class="image-text-section__text_container image-text-section--image-full-width__text_container"
@@ -362,6 +360,6 @@
         </p>
       </div>
     </footer>
-    <script src="./src/main.js"></script>
+    <script src="./dist/js/main.js"></script>
   </body>
 </html>
